--- a/ProvaProgWeb/index.html
+++ b/ProvaProgWeb/index.html
@@ -12,11 +12,9 @@
     <!--comentação foda-->
     <header>
         <nav>
-            <p>Sport Club Corinthians Paulista</p>
-
-            <!-- Texto a mais
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus dicta esse natus sint dolorum laboriosam itaque sapiente unde ea, et nemo eius, quisquam aliquid labore maxime consequuntur a dolores inventore.</p> -->
-
+            <p><img src="assets/brasao.png" alt="brasao"> 
+            </p>
+            
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#historia">Historia</a></li>
@@ -128,7 +126,7 @@
     <section id="localização" class="localização">
        
         <div id="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.636669450434!2d-46.47725198446628!3d-23.545566884690697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce66dec98fb855%3A0xf2b061ffbcd2ecf8!2sNeo%20Qu%C3%ADmica%20Arena!5e0!3m2!1spt-BR!2sbr!4v1679928176153!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" ></iframe> 
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.636669450434!2d-46.47725198446628!3d-23.545566884690697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce66dec98fb855%3A0xf2b061ffbcd2ecf8!2sNeo%20Qu%C3%ADmica%20Arena!5e0!3m2!1spt-BR!2sbr!4v1679928176153!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"  ></iframe> 
         </div>
     </section>
 
